[package]
name = "timberfs"
version = "0.10.0"
edition = "2021"
description = "Experimental append-only, transparently compressed, write-time-indexed filesystem for log files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torstei/timberfs"

[[bin]]
name = "timberfs"
path = "src/main.rs"

[lib]
name = "timberfs"
path = "src/lib.rs"

[[bin]]
name = "timber-filter"
path = "src/timber_filter.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
# default-features off: skip the libfuse C linkage (pure-Rust mount via
# fusermount3). abi-7-19 enables the notify API (Notifier::inval_inode),
# used to invalidate kernel caches after rotation; ABI 7.19 is ancient
# (kernel 3.x) so this doesn't restrict where timberfs runs.
fuser = { version = "0.15", default-features = false, features = ["abi-7-19"] }
libc = "0.2"
regex = "1"
tar = "0.4"
serde_json = "1"
zstd = "0.13"

[profile.release]
lto = true

# Debian packaging (build with `cargo deb`, needs `cargo install cargo-deb`)
[package.metadata.deb]
maintainer = "Torstein Tauno Svendsen <torstei@gmail.com>"
copyright = "2026, Torstein Tauno Svendsen"
section = "admin"
priority = "optional"
# fusermount3 (package fuse3) is exec'ed at mount time; $auto picks up the
# shared-library deps of the binary itself.
depends = ["$auto", "fuse3"]
extended-description = """\
Experimental FUSE filesystem purpose-built for log files. Files in the \
mount are append-only and stored as chunked zstd frames with a per-chunk \
write-time index, so "give me what was written between 13:42 and 13:43" \
is a binary search plus a few frame decompressions regardless of file \
size. Includes time-based rotation and retention that relocate compressed \
frames verbatim, and the data files remain recoverable with stock zstd. \
Ships systemd template units: timberfs@.service for mounting instances at \
boot, and a socket-activated timberfs-log@.socket/.service pair for streaming \
a producer's logs into a store over a FIFO."""
assets = [
    ["target/release/timberfs", "usr/bin/", "755"],
    ["target/release/timber-filter", "usr/bin/", "755"],
    ["packaging/timberfs.1", "usr/share/man/man1/", "644"],
    ["packaging/timber-filter.1", "usr/share/man/man1/", "644"],
    ["packaging/timberfs-records.5", "usr/share/man/man5/", "644"],
    ["packaging/timberfs-completion.bash", "usr/share/bash-completion/completions/timberfs", "644"],
    ["packaging/timberfs-completion.zsh", "usr/share/zsh/vendor-completions/_timberfs", "644"],
    ["packaging/timber-filter-completion.bash", "usr/share/bash-completion/completions/timber-filter", "644"],
    ["packaging/timber-filter-completion.zsh", "usr/share/zsh/vendor-completions/_timber-filter", "644"],
    ["README.md", "usr/share/doc/timberfs/README.md", "644"],
    ["docs/deployment.md", "usr/share/doc/timberfs/deployment.md", "644"],
    ["packaging/timberfs@.service", "lib/systemd/system/timberfs@.service", "644"],
    ["packaging/timberfs-log@.socket", "lib/systemd/system/timberfs-log@.socket", "644"],
    ["packaging/timberfs-log@.service", "lib/systemd/system/timberfs-log@.service", "644"],
    ["packaging/timberfs-tmpfiles.conf", "usr/lib/tmpfiles.d/timberfs.conf", "644"],
    ["packaging/timberfs.conf.example", "usr/share/doc/timberfs/examples/timberfs.conf.example", "644"],
    ["packaging/etc-README", "etc/timberfs/README", "644"],
    ["packaging/forests-default.conf", "etc/timberfs/forests.d/default.conf", "644"],
]

# The published amd64 package. CI builds it with cargo-zigbuild against an old
# glibc (target x86_64-unknown-linux-gnu.2.31) so one .deb installs from Ubuntu
# 20.04 (focal, glibc 2.31) through current — timberfs links no libfuse or
# libzstd (both are static/exec'd), so glibc is the only floor that matters.
#
# The dependency is stated, not `$auto`-derived: built on a modern host,
# dpkg-shlibdeps miscomputes it. The old-glibc binary links libpthread.so.0 and
# libdl.so.2 as separate libraries (they merged into libc6 at 2.34), so on a
# 2.34+ builder it stamps `libc6 (>= 2.34)` and locks out the very releases we
# target. The binary itself references only <= glibc 2.30 symbols and runs on
# focal — the focal VM test proves it. zig statically links libgcc, so there is
# no libgcc-s1 dependency either.
[package.metadata.deb.variants.compat]
name = "timberfs"
depends = "fuse3, libc6 (>= 2.31)"
